2012-10-11  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-05
        * Fix bug in last 10 lumiblock global error plot.

2012-09-13  Julia I. Hofmann <jhofmann@kip.uni-heidelberg.de>
        * Tag as TrigT1CaloMonitoring-00-13-04
        * Extending the finetime monitoring to read in reference values.

2012-09-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-03
        * Record rejected event numbers.

2012-09-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-02
        * Update JobOptions.

2012-09-04  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-01
        * Forgot const.

2012-08-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-00
        * Update corrupt events veto.
        * Move TrigT1CaloMonErrorTool to TrigT1CaloMonitoringTools.

2012-08-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-12
        * Add global error timing plot for Tier0.

2012-08-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-11
        * Add global error timing plot for online.

2012-08-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-10
        * Small fix to Lumiblock plot for Tier0.

2012-07-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-09
        * Coverity fixes.
        * Small fix to online Global Errors vs Lumiblock plot.

2012-07-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-08
        * Change OnlineTest property default back to false.

2012-07-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-07
        * Add more global error plots to help diagnosis.

2012-07-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-06