@@ -1,3 +1,7 @@
+2012-10-23  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-13-06
+        * Add some debugging tools.
+
 2012-10-11  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-13-05
         * Fix bug in last 10 lumiblock global error plot.
